created user class which stores friend networks of arbitrary degree of separation

--- a/network_final.ipynb
+++ b/network_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -16,12 +16,13 @@
     "# Since Python dictionaries are extremely fast (equivalent to hash tables), should be able to flag transaction fast\n",
     "\n",
     "import pandas as pd\n",
-    "import csv"
+    "import csv\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -131,11 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
+      "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n"
+     ]
+    }
+   ],
    "source": [
     "## find all transactions where user <user_id> was giver, then find list of partners in those transactions\n",
     "for user_id,transactions in givers:\n",
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -183,9 +193,11 @@
    },
    "outputs": [],
    "source": [
-    "partners = {}\n",
+    "user_master_list = {}\n",
     "\n",
     "#cycle through all users and agglomerate partners from all transactions\n",
+    "#conversion back and forth between list and numpy array is pretty fast\n",
+    "#lists easier to append to, hence why stored as list, but also wanted to use numpy.unique function.\n",
     "for user_id in user_list:\n",
     "    \n",
     "    pp = []\n",
@@ -197,7 +209,28 @@
     "        pp += partners_2[user_id]\n",
     "        \n",
     "    #reduce to (sorted) list of all unique partners\n",
-    "    partners[user_id] = np.unique(pp)"
+    "    user_master_list[user_id] = User(user_id, list(np.unique(pp)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
+    "#creating lists of friends down to 4th-degree connections takes about two minutes for 70,000 users on my macbook pro.\n",
+    "tier_depth = 4\n",
+    "\n",
+    "#successively add tiers of friendship to every user in user_master_list\n",
+    "for tier in range(2,tier_depth+1):\n",
+    "    print(\"Building lists of connections of degree\", tier, \"for each user...\")\n",
+    "    for user_id, user_info in user_master_list.items():\n",
+    "        user_info.friends[tier] = find_new_friends(user_master_list,user_info,tier)\n",
+    "        \n",
+    "print(\"Done. Connections of degree n accessible via User.friends[n]\")"
    ]
   }
  ],
