--- a/network_test.ipynb
+++ b/network_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,16 +31,26 @@
     "import time\n",
     "import numpy as np\n",
     "%install_ext https://raw.github.com/cpcloud/ipython-autotime/master/autotime.py\n",
-    "%load_ext autotime"
+    "%load_ext autotime\n",
+    "from user_class import User, find_new_friends\n",
+    "from itertools import compress"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.52 ms\n"
+     ]
+    }
+   ],
    "source": [
     "input_dir = 'paymo_input/'\n",
     "batch_file = 'batch_payment.csv'\n",
@@ -54,11 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 29 s\n"
+     ]
+    }
+   ],
    "source": [
     "batch_dict = {}\n",
     "batch_dict['time'] = {}\n",
@@ -81,11 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 21.1 s\n"
+     ]
+    }
+   ],
    "source": [
     "stream_dict = {}\n",
     "stream_dict['time'] = {}\n",
@@ -132,15 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 332 ms\n"
+     ]
+    }
+   ],
    "source": [
     "#dictionary columns are randomly ordered - reorder as expected\n",
     "df_batch = df_batch[['time','id1','id2','amount','message']]\n",
-    "df_stream = df_stream[['time','id1','id2','amount','message']]"
+    "#df_stream = df_stream[['time','id1','id2','amount','message']]"
    ]
   },
   {
@@ -230,11 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1.73 ms\n"
+     ]
+    }
+   ],
    "source": [
     "givers = df_batch.groupby('id1')\n",
     "receivers = df_batch.groupby('id2')\n",
@@ -244,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +297,7 @@
      "text": [
       "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
       "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n",
-      "time: 1min 33s\n"
+      "time: 1min 38s\n"
      ]
     }
    ],
@@ -285,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -294,10 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(77360,)\n",
-      "(77336,)\n",
-      "(77360,)\n",
-      "time: 24.1 ms\n"
+      "time: 23.5 ms\n"
      ]
     }
    ],
@@ -311,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -320,14 +359,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.78 s\n"
+      "time: 2.4 s\n"
      ]
     }
    ],
    "source": [
-    "partners = {}\n",
+    "user_master_list = {}\n",
     "\n",
     "#cycle through all users and agglomerate partners from all transactions\n",
+    "#conversion back and forth between list and numpy array is pretty fast\n",
+    "#lists easier to append to, hence why stored as list, but also wanted to use numpy.unique function.\n",
     "for user_id in user_list:\n",
     "    \n",
     "    pp = []\n",
@@ -339,12 +380,62 @@
     "        pp += partners_2[user_id]\n",
     "        \n",
     "    #reduce to (sorted) list of all unique partners\n",
-    "    partners[user_id] = np.unique(pp)"
+    "    user_master_list[user_id] = User(user_id, list(np.unique(pp)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building lists of connections of degree 2 for each user...\n",
+      "time: 8.75 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
+    "#creating lists of friends down to 4th-degree connections takes about two minutes for 70,000 users on my macbook pro.\n",
+    "tier_depth = 4\n",
+    "\n",
+    "#successively add tiers of friendship to every user in user_master_list\n",
+    "for tier in range(2,tier_depth+1):\n",
+    "    print(\"Building lists of connections of degree\", tier, \"for each user...\")\n",
+    "    for user_id, user_info in user_master_list.items():\n",
+    "        user_info.friends[tier] = find_new_friends(user_master_list,user_info,tier)\n",
+    "        \n",
+    "print(\"Done. Connections of degree n accessible via User.friends[n]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1min 27s\n"
+     ]
+    }
+   ],
+   "source": [
+    "for user_id, user_info in user_master_list.items():\n",
+    "    user_info.friends[4] = find_new_friends(user_info,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -352,10 +443,231 @@
     {
      "data": {
       "text/plain": [
-       "77360"
+       "[3,\n",
+       " 15,\n",
+       " 17,\n",
+       " 25,\n",
+       " 46,\n",
+       " 57,\n",
+       " 84,\n",
+       " 89,\n",
+       " 91,\n",
+       " 92,\n",
+       " 95,\n",
+       " 111,\n",
+       " 125,\n",
+       " 140,\n",
+       " 143,\n",
+       " 145,\n",
+       " 147,\n",
+       " 165,\n",
+       " 166,\n",
+       " 167,\n",
+       " 176,\n",
+       " 177,\n",
+       " 182,\n",
+       " 184,\n",
+       " 209,\n",
+       " 239,\n",
+       " 272,\n",
+       " 282,\n",
+       " 283,\n",
+       " 376,\n",
+       " 395,\n",
+       " 398,\n",
+       " 468,\n",
+       " 505,\n",
+       " 510,\n",
+       " 576,\n",
+       " 625,\n",
+       " 647,\n",
+       " 653,\n",
+       " 699,\n",
+       " 710,\n",
+       " 729,\n",
+       " 818,\n",
+       " 837,\n",
+       " 913,\n",
+       " 923,\n",
+       " 996,\n",
+       " 1026,\n",
+       " 1042,\n",
+       " 1091,\n",
+       " 1224,\n",
+       " 1270,\n",
+       " 1361,\n",
+       " 1367,\n",
+       " 1373,\n",
+       " 1477,\n",
+       " 1560,\n",
+       " 1569,\n",
+       " 1699,\n",
+       " 1900,\n",
+       " 1902,\n",
+       " 1912,\n",
+       " 1938,\n",
+       " 2031,\n",
+       " 2077,\n",
+       " 2128,\n",
+       " 2138,\n",
+       " 2230,\n",
+       " 2319,\n",
+       " 2358,\n",
+       " 2366,\n",
+       " 2384,\n",
+       " 2483,\n",
+       " 2511,\n",
+       " 2529,\n",
+       " 2553,\n",
+       " 2571,\n",
+       " 2581,\n",
+       " 2588,\n",
+       " 2721,\n",
+       " 2811,\n",
+       " 2938,\n",
+       " 2961,\n",
+       " 3450,\n",
+       " 3451,\n",
+       " 3540,\n",
+       " 3827,\n",
+       " 3940,\n",
+       " 4111,\n",
+       " 4260,\n",
+       " 4366,\n",
+       " 4660,\n",
+       " 4661,\n",
+       " 4662,\n",
+       " 4663,\n",
+       " 4664,\n",
+       " 4665,\n",
+       " 4666,\n",
+       " 4667,\n",
+       " 4669,\n",
+       " 4670,\n",
+       " 4671,\n",
+       " 4672,\n",
+       " 4673,\n",
+       " 4674,\n",
+       " 4676,\n",
+       " 4677,\n",
+       " 4678,\n",
+       " 4679,\n",
+       " 4680,\n",
+       " 4681,\n",
+       " 4682,\n",
+       " 4683,\n",
+       " 4684,\n",
+       " 4685,\n",
+       " 4686,\n",
+       " 4687,\n",
+       " 4688,\n",
+       " 4689,\n",
+       " 4690,\n",
+       " 4691,\n",
+       " 4692,\n",
+       " 4693,\n",
+       " 4694,\n",
+       " 4695,\n",
+       " 4696,\n",
+       " 4697,\n",
+       " 4698,\n",
+       " 4699,\n",
+       " 4700,\n",
+       " 4701,\n",
+       " 4702,\n",
+       " 4703,\n",
+       " 4704,\n",
+       " 4705,\n",
+       " 4706,\n",
+       " 4707,\n",
+       " 4708,\n",
+       " 4709,\n",
+       " 4710,\n",
+       " 4711,\n",
+       " 4712,\n",
+       " 4713,\n",
+       " 4714,\n",
+       " 4715,\n",
+       " 4717,\n",
+       " 4718,\n",
+       " 4719,\n",
+       " 4720,\n",
+       " 4721,\n",
+       " 4722,\n",
+       " 4723,\n",
+       " 4724,\n",
+       " 4725,\n",
+       " 4726,\n",
+       " 4727,\n",
+       " 4728,\n",
+       " 4730,\n",
+       " 4731,\n",
+       " 4732,\n",
+       " 4733,\n",
+       " 4734,\n",
+       " 4735,\n",
+       " 4736,\n",
+       " 4737,\n",
+       " 4738,\n",
+       " 4739,\n",
+       " 4740,\n",
+       " 4741,\n",
+       " 4742,\n",
+       " 4743,\n",
+       " 4744,\n",
+       " 4745,\n",
+       " 4746,\n",
+       " 4747,\n",
+       " 4748,\n",
+       " 4749,\n",
+       " 4750,\n",
+       " 4751,\n",
+       " 4752,\n",
+       " 4753,\n",
+       " 4754,\n",
+       " 4755,\n",
+       " 4756,\n",
+       " 4757,\n",
+       " 4758,\n",
+       " 4759,\n",
+       " 4760,\n",
+       " 4761,\n",
+       " 4762,\n",
+       " 4763,\n",
+       " 4764,\n",
+       " 4765,\n",
+       " 4766,\n",
+       " 4767,\n",
+       " 4768,\n",
+       " 4769,\n",
+       " 4770,\n",
+       " 4771,\n",
+       " 4772,\n",
+       " 4773,\n",
+       " 4774,\n",
+       " 5202,\n",
+       " 5559,\n",
+       " 5840,\n",
+       " 7844,\n",
+       " 7898,\n",
+       " 7909,\n",
+       " 8080,\n",
+       " 10221,\n",
+       " 10289,\n",
+       " 13954,\n",
+       " 15579,\n",
+       " 16731,\n",
+       " 16889,\n",
+       " 18475,\n",
+       " 22133,\n",
+       " 23803,\n",
+       " 29304,\n",
+       " 31751,\n",
+       " 43029,\n",
+       " 46142]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,17 +675,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.86 ms\n"
+      "time: 6.6 ms\n"
      ]
     }
    ],
    "source": [
-    "len(partners.keys())"
+    "user_master_list[4].friends[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1.27 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_master_list[0].friends[2] = find_new_friends(user_master_list[5],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1.91 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(users_master_list[5].friends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -383,18 +743,26 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "time: 949 µs\n"
+      "[0, 4730, 4920, 4921, 67513]\n",
+      "2\n",
+      "[3, 17, 57, 89, 91, 92, 125, 145, 147, 151, 166, 167, 177, 184, 209, 217, 225, 282, 283, 376, 468, 625, 653, 699, 710, 729, 913, 1026, 1091, 1224, 1361, 1373, 1477, 1560, 1569, 1900, 2230, 2358, 2366, 2384, 2490, 2511, 2529, 2553, 2721, 2811, 2938, 2961, 3450, 3451, 3540, 3827, 3940, 4111, 4260, 4366, 4660, 4661, 4662, 4663, 4664, 4665, 4666, 4667, 4668, 4669, 4670, 4671, 4672, 4673, 4674, 4675, 4676, 4677, 4678, 4679, 4680, 4681, 4682, 4683, 4684, 4685, 4686, 4687, 4688, 4689, 4690, 4691, 4692, 4693, 4694, 4695, 4696, 4697, 4698, 4699, 4700, 4701, 4702, 4703, 4704, 4705, 4706, 4707, 4708, 4709, 4710, 4711, 4712, 4713, 4714, 4715, 4716, 4717, 4718, 4719, 4720, 4721, 4722, 4723, 4724, 4725, 4726, 4727, 4728, 4729, 4731, 4732, 4733, 4734, 4735, 4736, 4737, 4738, 4739, 4740, 4741, 4742, 4743, 4744, 4745, 4746, 4747, 4748, 4749, 4750, 4751, 4752, 4753, 4754, 4755, 4756, 4757, 4758, 4759, 4760, 4761, 4762, 4763, 4764, 4765, 4766, 4767, 4768, 4769, 4770, 4771, 4772, 5559, 5840, 7844, 7898, 7909, 10221, 10289, 13954, 16731, 16889, 22133, 23803, 29304, 31751, 43029, 46142]\n",
+      "3\n",
+      "[15, 25, 46, 84, 95, 111, 140, 143, 165, 176, 182, 192, 239, 272, 394, 395, 398, 400, 408, 505, 510, 576, 647, 818, 837, 923, 996, 1042, 1219, 1270, 1367, 1699, 1902, 1912, 1938, 2031, 2077, 2128, 2138, 2319, 2483, 2571, 2581, 2588, 4773, 4774, 5202, 8080, 15579, 18475]\n",
+      "4\n",
+      "[1, 8, 13, 34, 58, 66, 105, 377, 403, 405, 441, 577, 677, 779, 889, 909, 954, 1220, 1334, 1426, 1502, 1582, 1590, 1772, 1825, 1849, 2081, 2208, 2258, 2370, 2399, 2425, 2481, 2501, 2531, 2538, 2555, 2771, 2778, 2813, 3717, 4097, 4209, 4217, 4522, 4569, 4775, 4776, 4777, 4778, 4779, 4780, 4781, 4782, 4783, 4784, 4785, 4786, 4787, 4788, 4789, 4790, 4791, 4792, 4793, 4794, 4795, 4796, 4797, 4798, 4799, 4800, 4801, 4802, 4803, 4804, 4805, 4806, 4807, 4808, 4809, 4810, 4811, 4812, 4813, 4814, 4815, 4816, 4817, 4818, 4819, 4820, 4821, 4822, 4823, 4824, 4825, 4826, 4827, 4828, 4829, 4830, 4831, 4832, 4833, 4834, 4835, 4836, 4837, 4838, 4839, 4840, 4841, 4842, 4843, 4844, 4845, 4846, 4847, 4848, 4849, 4850, 4851, 4852, 4853, 4854, 4855, 4856, 4857, 4858, 4859, 4860, 4861, 4862, 4863, 4864, 4865, 4866, 4867, 4868, 4869, 4870, 4871, 4872, 4873, 4874, 4875, 4876, 4877, 4878, 4879, 4880, 4881, 4882, 4883, 4884, 4885, 4886, 4887, 4888, 4889, 4890, 4891, 4892, 4893, 4894, 4895, 4896, 4897, 4898, 4899, 4900, 4901, 4902, 4903, 4904, 4905, 4906, 4907, 4908, 4909, 4910, 4911, 4912, 4913, 4914, 4915, 4916, 4917, 4918, 4919, 4997, 7106, 10082, 10485, 10506, 10509, 10733, 16932, 17340, 24817, 26302]\n",
+      "time: 2.08 ms\n"
      ]
     }
    ],
    "source": [
-    "if 10000 in partners_1.keys():\n",
-    "    print(1)"
+    "for k,v in users_master_list[5].friends.items():\n",
+    "    print(k)\n",
+    "    print(v)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -403,16 +771,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.08 ms\n"
+      "time: 685 µs\n"
      ]
     }
    ],
    "source": [
-    "    #merge into single list, use .unique() to weed out duplicates\n",
-    "    #stations = pd.concat([start_stations, end_stations], axis=0, ignore_index = True)\n",
-    "    #unique_stations = stations.unique()\n",
-    "    #visited_stations[k] = len(unique_stations)\n",
-    "    #partners[user] = "
+    "tst = User(0, partners[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'User' object has no attribute 'partners'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-aa4f8ed46840>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartners\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'User' object has no attribute 'partners'"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 4.46 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "tst.partners"
    ]
   },
   {
@@ -422,21 +816,52 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 8.62 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "users = df.groupby('id1')\n",
-    "\n",
-    "#store the number of visited stations in dictionary format, using each bikeid as key\n",
-    "visited_stations = {}\n",
-    "\n",
-    "for k,v in bikes:\n",
-    "    #following gets list of start and end stations visited by each bike\n",
-    "    start_stations = bikes.get_group(k)['start station id']\n",
-    "    end_stations = bikes.get_group(k)['end station id']\n",
+    "## the tier parameter indicates what degree of friendship we're searching for - need it so we know what existing friends\n",
+    "#to account for.\n",
+    "def find_new_friends(current_user, new_tier):\n",
     "    \n",
-    "    #merge into single list, use .unique() to weed out duplicates\n",
-    "    stations = pd.concat([start_stations, end_stations], axis=0, ignore_index = True)\n",
-    "    unique_stations = stations.unique()\n",
-    "    visited_stations[k] = len(unique_stations)"
+    "    #sanity check in case we incorrectly specify new_tier somewhere else\n",
+    "    if new_tier <= 1:\n",
+    "        print('Function only works if there are at least some pre-existing friends (choose higher tier)')\n",
+    "        return\n",
+    "    \n",
+    "    #we have to pool together all existing first-degree friends, second-degree, etc.\n",
+    "    #by initializing existing_friends with the user themselves, avoid ever adding them to new_friends\n",
+    "    existing_friends = [current_user.user_id] \n",
+    "    \n",
+    "    #don't need to check for redundancy of users in tiers - any given user can only belong to one tier\n",
+    "    for key in range(1,new_tier):\n",
+    "        existing_friends += current_user.friends[key]\n",
+    "    \n",
+    "    tentative_new = []\n",
+    "    \n",
+    "    #for each user who is currently a friend of degree new_tier-1, add all of their first-degree friends to tentative_new\n",
+    "    for friend_id in current_user.friends:\n",
+    "        tentative_new += user_master_list[friend_id].friends[1] \n",
+    "    \n",
+    "    tentative_new = list(np.unique(tentative_new)) #get rid of duplicates\n",
+    "    #following line returns \n",
+    "    new_friends = [ x for x in tentative_new if x not in existing_friends ]\n",
+    "    \n",
+    "    return new_friends"
    ]
   }
  ],
