probable performance dead end - slow to generate 3rd/4th order friends

--- a/network_final.ipynb
+++ b/network_final.ipynb
@@ -221,11 +221,14 @@
    "outputs": [],
    "source": [
     "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
-    "#creating lists of friends down to 4th-degree connections takes about two minutes for 70,000 users on my macbook pro.\n",
+    "#this is the most labor-intensive part of the program, unsurprisingly - n=2 takes 2 minutes on my macbook pro\n",
+    "#n=3:\n",
+    "#n=4:\n",
     "tier_depth = 4\n",
     "\n",
     "#successively add tiers of friendship to every user in user_master_list\n",
     "for tier in range(2,tier_depth+1):\n",
+    "    \n",
     "    print(\"Building lists of connections of degree\", tier, \"for each user...\")\n",
     "    for user_id, user_info in user_master_list.items():\n",
     "        user_info.friends[tier] = find_new_friends(user_master_list,user_info,tier)\n",
