--- a/network_test.ipynb
+++ b/network_test.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.52 ms\n"
+      "time: 2.54 ms\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "batch_path = input_dir + batch_file\n",
     "stream_path = input_dir + stream_file\n",
     "\n",
-    "test_file = 'batch_test_2.csv'\n",
+    "test_file = 'batch_payment.csv'\n",
     "test_path = input_dir + test_file"
    ]
   },
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 29 s\n"
+      "time: 26.7 s\n"
      ]
     }
    ],
@@ -99,19 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 21.1 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stream_dict = {}\n",
     "stream_dict['time'] = {}\n",
@@ -167,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 332 ms\n"
+      "time: 345 ms\n"
      ]
     }
    ],
@@ -175,91 +167,6 @@
     "#dictionary columns are randomly ordered - reorder as expected\n",
     "df_batch = df_batch[['time','id1','id2','amount','message']]\n",
     "#df_stream = df_stream[['time','id1','id2','amount','message']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>id1</th>\n",
-       "      <th>id2</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>message</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3934578</th>\n",
-       "      <td>2016-11-02 09:49:29</td>\n",
-       "      <td>20942</td>\n",
-       "      <td>826</td>\n",
-       "      <td>39.40</td>\n",
-       "      <td>🍻🍾🍷</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3934579</th>\n",
-       "      <td>2016-11-02 09:49:29</td>\n",
-       "      <td>2464</td>\n",
-       "      <td>2425</td>\n",
-       "      <td>6.03</td>\n",
-       "      <td>Taco tuesday</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3934580</th>\n",
-       "      <td>2016-11-02 09:49:29</td>\n",
-       "      <td>68862</td>\n",
-       "      <td>25922</td>\n",
-       "      <td>22.48</td>\n",
-       "      <td>Comcast</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3934581</th>\n",
-       "      <td>2016-11-02 09:49:29</td>\n",
-       "      <td>66910</td>\n",
-       "      <td>21661</td>\n",
-       "      <td>21.28</td>\n",
-       "      <td>Signs</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3934582</th>\n",
-       "      <td>2016-11-02 09:49:29</td>\n",
-       "      <td>64593</td>\n",
-       "      <td>18179</td>\n",
-       "      <td>31.57</td>\n",
-       "      <td>blue kiwi</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        time     id1     id2  amount         message\n",
-       "3934578  2016-11-02 09:49:29   20942     826   39.40            🍻🍾🍷 \n",
-       "3934579  2016-11-02 09:49:29    2464    2425    6.03   Taco tuesday \n",
-       "3934580  2016-11-02 09:49:29   68862   25922   22.48        Comcast \n",
-       "3934581  2016-11-02 09:49:29   66910   21661   21.28          Signs \n",
-       "3934582  2016-11-02 09:49:29   64593   18179   31.57      blue kiwi "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_batch.tail()"
    ]
   },
   {
@@ -273,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.73 ms\n"
+      "time: 1.98 ms\n"
      ]
     }
    ],
@@ -297,7 +204,7 @@
      "text": [
       "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
       "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n",
-      "time: 1min 38s\n"
+      "time: 1min 43s\n"
      ]
     }
    ],
@@ -336,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 23.5 ms\n"
+      "time: 23.3 ms\n"
      ]
     }
    ],
@@ -359,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.4 s\n"
+      "time: 2.39 s\n"
      ]
     }
    ],
@@ -385,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -394,28 +301,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building lists of connections of degree 2 for each user...\n",
-      "time: 8.75 s\n"
+      "Building lists of connections of degree 3 for each user...\n"
      ]
     }
    ],
    "source": [
     "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
     "#creating lists of friends down to 4th-degree connections takes about two minutes for 70,000 users on my macbook pro.\n",
-    "tier_depth = 4\n",
+    "tier_depth = 3\n",
     "\n",
     "#successively add tiers of friendship to every user in user_master_list\n",
-    "for tier in range(2,tier_depth+1):\n",
+    "for tier in range(3,tier_depth+1):\n",
+    "    \n",
     "    print(\"Building lists of connections of degree\", tier, \"for each user...\")\n",
-    "    for user_id, user_info in user_master_list.items():\n",
-    "        user_info.friends[tier] = find_new_friends(user_master_list,user_info,tier)\n",
-    "        \n",
+    "    \n",
+    "    for user_id, user_data in user_master_list.items():\n",
+    "        user_data.friends[tier] = find_new_friends(user_master_list,user_data,tier)\n",
+    "            \n",
     "print(\"Done. Connections of degree n accessible via User.friends[n]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -424,13 +332,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1min 27s\n"
+      "[1, 58, 105, 377, 441, 677, 889, 1220, 1334, 1426, 1502, 1825, 2258, 2370, 2501, 2531, 2771, 2778, 3717, 4097, 4209, 4217, 4569, 4775, 4776, 4777, 4778, 4779, 4780, 4781, 4782, 4783, 4784, 4785, 4786, 4787, 4788, 4789, 4790, 4791, 4792, 4793, 4794, 4795, 4796, 4797, 4798, 4799, 4800, 4801, 4802, 4803, 4804, 4805, 4806, 4807, 4808, 4809, 4810, 4811, 4812, 4813, 4814, 4815, 4816, 4817, 4818, 4819, 4820, 4821, 4822, 4823, 4824, 4825, 4826, 4827, 4828, 4829, 4830, 4831, 4832, 4833, 4834, 4835, 4836, 4837, 4838, 4839, 4840, 4841, 4842, 4843, 4844, 4845, 4846, 4847, 4848, 4849, 4850, 4851, 4852, 4853, 4997, 7106, 10082, 10485, 10506, 10509, 10733, 16932, 17340, 24817, 26302]\n",
+      "time: 1.91 ms\n"
      ]
     }
    ],
    "source": [
-    "for user_id, user_info in user_master_list.items():\n",
-    "    user_info.friends[4] = find_new_friends(user_info,4)"
+    "## build forward lookup of what degree friend another user is to you\n",
+    "\n",
+    "user = user_master_list[5]\n",
+    "#for user in user_master_list:\n",
+    "user.build_dos()\n",
+    "print(user.friends[4])"
    ]
   },
   {
@@ -681,187 +594,6 @@
    ],
    "source": [
     "user_master_list[4].friends[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 1.27 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "user_master_list[0].friends[2] = find_new_friends(user_master_list[5],2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 1.91 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "type(users_master_list[5].friends)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[0, 4730, 4920, 4921, 67513]\n",
-      "2\n",
-      "[3, 17, 57, 89, 91, 92, 125, 145, 147, 151, 166, 167, 177, 184, 209, 217, 225, 282, 283, 376, 468, 625, 653, 699, 710, 729, 913, 1026, 1091, 1224, 1361, 1373, 1477, 1560, 1569, 1900, 2230, 2358, 2366, 2384, 2490, 2511, 2529, 2553, 2721, 2811, 2938, 2961, 3450, 3451, 3540, 3827, 3940, 4111, 4260, 4366, 4660, 4661, 4662, 4663, 4664, 4665, 4666, 4667, 4668, 4669, 4670, 4671, 4672, 4673, 4674, 4675, 4676, 4677, 4678, 4679, 4680, 4681, 4682, 4683, 4684, 4685, 4686, 4687, 4688, 4689, 4690, 4691, 4692, 4693, 4694, 4695, 4696, 4697, 4698, 4699, 4700, 4701, 4702, 4703, 4704, 4705, 4706, 4707, 4708, 4709, 4710, 4711, 4712, 4713, 4714, 4715, 4716, 4717, 4718, 4719, 4720, 4721, 4722, 4723, 4724, 4725, 4726, 4727, 4728, 4729, 4731, 4732, 4733, 4734, 4735, 4736, 4737, 4738, 4739, 4740, 4741, 4742, 4743, 4744, 4745, 4746, 4747, 4748, 4749, 4750, 4751, 4752, 4753, 4754, 4755, 4756, 4757, 4758, 4759, 4760, 4761, 4762, 4763, 4764, 4765, 4766, 4767, 4768, 4769, 4770, 4771, 4772, 5559, 5840, 7844, 7898, 7909, 10221, 10289, 13954, 16731, 16889, 22133, 23803, 29304, 31751, 43029, 46142]\n",
-      "3\n",
-      "[15, 25, 46, 84, 95, 111, 140, 143, 165, 176, 182, 192, 239, 272, 394, 395, 398, 400, 408, 505, 510, 576, 647, 818, 837, 923, 996, 1042, 1219, 1270, 1367, 1699, 1902, 1912, 1938, 2031, 2077, 2128, 2138, 2319, 2483, 2571, 2581, 2588, 4773, 4774, 5202, 8080, 15579, 18475]\n",
-      "4\n",
-      "[1, 8, 13, 34, 58, 66, 105, 377, 403, 405, 441, 577, 677, 779, 889, 909, 954, 1220, 1334, 1426, 1502, 1582, 1590, 1772, 1825, 1849, 2081, 2208, 2258, 2370, 2399, 2425, 2481, 2501, 2531, 2538, 2555, 2771, 2778, 2813, 3717, 4097, 4209, 4217, 4522, 4569, 4775, 4776, 4777, 4778, 4779, 4780, 4781, 4782, 4783, 4784, 4785, 4786, 4787, 4788, 4789, 4790, 4791, 4792, 4793, 4794, 4795, 4796, 4797, 4798, 4799, 4800, 4801, 4802, 4803, 4804, 4805, 4806, 4807, 4808, 4809, 4810, 4811, 4812, 4813, 4814, 4815, 4816, 4817, 4818, 4819, 4820, 4821, 4822, 4823, 4824, 4825, 4826, 4827, 4828, 4829, 4830, 4831, 4832, 4833, 4834, 4835, 4836, 4837, 4838, 4839, 4840, 4841, 4842, 4843, 4844, 4845, 4846, 4847, 4848, 4849, 4850, 4851, 4852, 4853, 4854, 4855, 4856, 4857, 4858, 4859, 4860, 4861, 4862, 4863, 4864, 4865, 4866, 4867, 4868, 4869, 4870, 4871, 4872, 4873, 4874, 4875, 4876, 4877, 4878, 4879, 4880, 4881, 4882, 4883, 4884, 4885, 4886, 4887, 4888, 4889, 4890, 4891, 4892, 4893, 4894, 4895, 4896, 4897, 4898, 4899, 4900, 4901, 4902, 4903, 4904, 4905, 4906, 4907, 4908, 4909, 4910, 4911, 4912, 4913, 4914, 4915, 4916, 4917, 4918, 4919, 4997, 7106, 10082, 10485, 10506, 10509, 10733, 16932, 17340, 24817, 26302]\n",
-      "time: 2.08 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k,v in users_master_list[5].friends.items():\n",
-    "    print(k)\n",
-    "    print(v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 685 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "tst = User(0, partners[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'User' object has no attribute 'partners'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-aa4f8ed46840>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartners\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'User' object has no attribute 'partners'"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 4.46 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "tst.partners"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 8.62 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "## the tier parameter indicates what degree of friendship we're searching for - need it so we know what existing friends\n",
-    "#to account for.\n",
-    "def find_new_friends(current_user, new_tier):\n",
-    "    \n",
-    "    #sanity check in case we incorrectly specify new_tier somewhere else\n",
-    "    if new_tier <= 1:\n",
-    "        print('Function only works if there are at least some pre-existing friends (choose higher tier)')\n",
-    "        return\n",
-    "    \n",
-    "    #we have to pool together all existing first-degree friends, second-degree, etc.\n",
-    "    #by initializing existing_friends with the user themselves, avoid ever adding them to new_friends\n",
-    "    existing_friends = [current_user.user_id] \n",
-    "    \n",
-    "    #don't need to check for redundancy of users in tiers - any given user can only belong to one tier\n",
-    "    for key in range(1,new_tier):\n",
-    "        existing_friends += current_user.friends[key]\n",
-    "    \n",
-    "    tentative_new = []\n",
-    "    \n",
-    "    #for each user who is currently a friend of degree new_tier-1, add all of their first-degree friends to tentative_new\n",
-    "    for friend_id in current_user.friends:\n",
-    "        tentative_new += user_master_list[friend_id].friends[1] \n",
-    "    \n",
-    "    tentative_new = list(np.unique(tentative_new)) #get rid of duplicates\n",
-    "    #following line returns \n",
-    "    new_friends = [ x for x in tentative_new if x not in existing_friends ]\n",
-    "    \n",
-    "    return new_friends"
    ]
   }
  ],
