time to explore sparse matrices

--- a/network_final.ipynb
+++ b/network_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,10 +33,7 @@
     "batch_file = 'batch_payment.csv'\n",
     "stream_file = 'stream_payment.csv'\n",
     "batch_path = input_dir + batch_file\n",
-    "stream_path = input_dir + stream_file\n",
-    "\n",
-    "test_file = 'batch_test_2.csv'\n",
-    "test_path = input_dir + test_file"
+    "stream_path = input_dir + stream_file"
    ]
   },
   {
@@ -210,6 +207,18 @@
     "        \n",
     "    #reduce to (sorted) list of all unique partners\n",
     "    user_master_list[user_id] = User(user_id, list(np.unique(pp)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## new approach - try to create a connectivity matrix - then, can figure out second-tier neighbors and such by multiplying matrix\n",
+    "# by itself"
    ]
   },
   {
