--- a/network_test.ipynb
+++ b/network_test.ipynb
@@ -33,7 +33,7 @@
     "%install_ext https://raw.github.com/cpcloud/ipython-autotime/master/autotime.py\n",
     "%load_ext autotime\n",
     "from user_class import User, find_new_friends\n",
-    "from itertools import compress"
+    "import scipy.sparse as sp"
    ]
   },
   {
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.54 ms\n"
+      "time: 3.31 ms\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
     "batch_dict['amount'] = {}\n",
     "batch_dict['message'] = {}\n",
     "\n",
-    "with open(batch_path, newline='') as csvfile:\n",
+    "with open(test_path, newline='') as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
     "    for i, row in enumerate(reader):\n",
     "        batch_dict['time'][i] = row['time']\n",
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 345 ms\n"
+      "time: 326 ms\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.98 ms\n"
+      "time: 2.02 ms\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
      "text": [
       "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
       "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n",
-      "time: 1min 43s\n"
+      "time: 1min 40s\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 23.3 ms\n"
+      "time: 23.2 ms\n"
      ]
     }
    ],
@@ -257,19 +257,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 2.39 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "user_master_list = {}\n",
     "\n",
@@ -292,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -302,6 +294,26 @@
      "output_type": "stream",
      "text": [
       "Building lists of connections of degree 3 for each user...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-3147d475ac8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser_data\u001b[0m \u001b[0;32min\u001b[0m \u001b[0muser_master_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0muser_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtier\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_new_friends\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_master_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muser_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtier\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done. Connections of degree n accessible via User.friends[n]\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Siwen/digital-wallet/user_class.py\u001b[0m in \u001b[0;36mfind_new_friends\u001b[0;34m(user_list, current_user, new_tier)\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mtentative_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtentative_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#get rid of duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;31m#following line returns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m     \u001b[0mnew_friends\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtentative_new\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexisting_friends\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_friends\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Siwen/digital-wallet/user_class.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mtentative_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtentative_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#get rid of duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;31m#following line returns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m     \u001b[0mnew_friends\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtentative_new\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexisting_friends\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_friends\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 8min 59s\n"
      ]
     }
    ],
@@ -323,278 +335,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 58, 105, 377, 441, 677, 889, 1220, 1334, 1426, 1502, 1825, 2258, 2370, 2501, 2531, 2771, 2778, 3717, 4097, 4209, 4217, 4569, 4775, 4776, 4777, 4778, 4779, 4780, 4781, 4782, 4783, 4784, 4785, 4786, 4787, 4788, 4789, 4790, 4791, 4792, 4793, 4794, 4795, 4796, 4797, 4798, 4799, 4800, 4801, 4802, 4803, 4804, 4805, 4806, 4807, 4808, 4809, 4810, 4811, 4812, 4813, 4814, 4815, 4816, 4817, 4818, 4819, 4820, 4821, 4822, 4823, 4824, 4825, 4826, 4827, 4828, 4829, 4830, 4831, 4832, 4833, 4834, 4835, 4836, 4837, 4838, 4839, 4840, 4841, 4842, 4843, 4844, 4845, 4846, 4847, 4848, 4849, 4850, 4851, 4852, 4853, 4997, 7106, 10082, 10485, 10506, 10509, 10733, 16932, 17340, 24817, 26302]\n",
-      "time: 1.91 ms\n"
+     "ename": "IndexError",
+     "evalue": "index 7000050 is out of bounds for axis 1 with size 77361",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-a384f3a29427>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mff\u001b[0m \u001b[0;32min\u001b[0m \u001b[0muser_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m#connections are bi-directional, so we fill in two spots in the connectivity matrix.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mconnectivity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mconnectivity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 7000050 is out of bounds for axis 1 with size 77361"
      ]
-    }
-   ],
-   "source": [
-    "## build forward lookup of what degree friend another user is to you\n",
-    "\n",
-    "user = user_master_list[5]\n",
-    "#for user in user_master_list:\n",
-    "user.build_dos()\n",
-    "print(user.friends[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3,\n",
-       " 15,\n",
-       " 17,\n",
-       " 25,\n",
-       " 46,\n",
-       " 57,\n",
-       " 84,\n",
-       " 89,\n",
-       " 91,\n",
-       " 92,\n",
-       " 95,\n",
-       " 111,\n",
-       " 125,\n",
-       " 140,\n",
-       " 143,\n",
-       " 145,\n",
-       " 147,\n",
-       " 165,\n",
-       " 166,\n",
-       " 167,\n",
-       " 176,\n",
-       " 177,\n",
-       " 182,\n",
-       " 184,\n",
-       " 209,\n",
-       " 239,\n",
-       " 272,\n",
-       " 282,\n",
-       " 283,\n",
-       " 376,\n",
-       " 395,\n",
-       " 398,\n",
-       " 468,\n",
-       " 505,\n",
-       " 510,\n",
-       " 576,\n",
-       " 625,\n",
-       " 647,\n",
-       " 653,\n",
-       " 699,\n",
-       " 710,\n",
-       " 729,\n",
-       " 818,\n",
-       " 837,\n",
-       " 913,\n",
-       " 923,\n",
-       " 996,\n",
-       " 1026,\n",
-       " 1042,\n",
-       " 1091,\n",
-       " 1224,\n",
-       " 1270,\n",
-       " 1361,\n",
-       " 1367,\n",
-       " 1373,\n",
-       " 1477,\n",
-       " 1560,\n",
-       " 1569,\n",
-       " 1699,\n",
-       " 1900,\n",
-       " 1902,\n",
-       " 1912,\n",
-       " 1938,\n",
-       " 2031,\n",
-       " 2077,\n",
-       " 2128,\n",
-       " 2138,\n",
-       " 2230,\n",
-       " 2319,\n",
-       " 2358,\n",
-       " 2366,\n",
-       " 2384,\n",
-       " 2483,\n",
-       " 2511,\n",
-       " 2529,\n",
-       " 2553,\n",
-       " 2571,\n",
-       " 2581,\n",
-       " 2588,\n",
-       " 2721,\n",
-       " 2811,\n",
-       " 2938,\n",
-       " 2961,\n",
-       " 3450,\n",
-       " 3451,\n",
-       " 3540,\n",
-       " 3827,\n",
-       " 3940,\n",
-       " 4111,\n",
-       " 4260,\n",
-       " 4366,\n",
-       " 4660,\n",
-       " 4661,\n",
-       " 4662,\n",
-       " 4663,\n",
-       " 4664,\n",
-       " 4665,\n",
-       " 4666,\n",
-       " 4667,\n",
-       " 4669,\n",
-       " 4670,\n",
-       " 4671,\n",
-       " 4672,\n",
-       " 4673,\n",
-       " 4674,\n",
-       " 4676,\n",
-       " 4677,\n",
-       " 4678,\n",
-       " 4679,\n",
-       " 4680,\n",
-       " 4681,\n",
-       " 4682,\n",
-       " 4683,\n",
-       " 4684,\n",
-       " 4685,\n",
-       " 4686,\n",
-       " 4687,\n",
-       " 4688,\n",
-       " 4689,\n",
-       " 4690,\n",
-       " 4691,\n",
-       " 4692,\n",
-       " 4693,\n",
-       " 4694,\n",
-       " 4695,\n",
-       " 4696,\n",
-       " 4697,\n",
-       " 4698,\n",
-       " 4699,\n",
-       " 4700,\n",
-       " 4701,\n",
-       " 4702,\n",
-       " 4703,\n",
-       " 4704,\n",
-       " 4705,\n",
-       " 4706,\n",
-       " 4707,\n",
-       " 4708,\n",
-       " 4709,\n",
-       " 4710,\n",
-       " 4711,\n",
-       " 4712,\n",
-       " 4713,\n",
-       " 4714,\n",
-       " 4715,\n",
-       " 4717,\n",
-       " 4718,\n",
-       " 4719,\n",
-       " 4720,\n",
-       " 4721,\n",
-       " 4722,\n",
-       " 4723,\n",
-       " 4724,\n",
-       " 4725,\n",
-       " 4726,\n",
-       " 4727,\n",
-       " 4728,\n",
-       " 4730,\n",
-       " 4731,\n",
-       " 4732,\n",
-       " 4733,\n",
-       " 4734,\n",
-       " 4735,\n",
-       " 4736,\n",
-       " 4737,\n",
-       " 4738,\n",
-       " 4739,\n",
-       " 4740,\n",
-       " 4741,\n",
-       " 4742,\n",
-       " 4743,\n",
-       " 4744,\n",
-       " 4745,\n",
-       " 4746,\n",
-       " 4747,\n",
-       " 4748,\n",
-       " 4749,\n",
-       " 4750,\n",
-       " 4751,\n",
-       " 4752,\n",
-       " 4753,\n",
-       " 4754,\n",
-       " 4755,\n",
-       " 4756,\n",
-       " 4757,\n",
-       " 4758,\n",
-       " 4759,\n",
-       " 4760,\n",
-       " 4761,\n",
-       " 4762,\n",
-       " 4763,\n",
-       " 4764,\n",
-       " 4765,\n",
-       " 4766,\n",
-       " 4767,\n",
-       " 4768,\n",
-       " 4769,\n",
-       " 4770,\n",
-       " 4771,\n",
-       " 4772,\n",
-       " 4773,\n",
-       " 4774,\n",
-       " 5202,\n",
-       " 5559,\n",
-       " 5840,\n",
-       " 7844,\n",
-       " 7898,\n",
-       " 7909,\n",
-       " 8080,\n",
-       " 10221,\n",
-       " 10289,\n",
-       " 13954,\n",
-       " 15579,\n",
-       " 16731,\n",
-       " 16889,\n",
-       " 18475,\n",
-       " 22133,\n",
-       " 23803,\n",
-       " 29304,\n",
-       " 31751,\n",
-       " 43029,\n",
-       " 46142]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 6.6 ms\n"
+      "time: 1.13 s\n"
      ]
     }
    ],
    "source": [
-    "user_master_list[4].friends[2]"
+    "## new approach - try to create a connectivity matrix - then, can figure out second-tier neighbors and such by multiplying matrix\n",
+    "# by itself\n",
+    "## conveniently, the list of users already ranges from 0 to 77,359 without gaps\n",
+    "## therefore, can use usernumbers directly as row/column indices in connectivity matrix\n",
+    "n_users = len(user_master_list.keys())\n",
+    "connectivity = np.zeros([n_users,n_users])\n",
+    "\n",
+    "for user_id, user_data in user_master_list.items():\n",
+    "    for ff in user_data.friends[1]:\n",
+    "        #connections are bi-directional, so we fill in two spots in the connectivity matrix.\n",
+    "        connectivity[user_id,ff] = 1\n",
+    "        connectivity[ff,user_id] = 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "time: 3.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(connectivity[,:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77360\n",
+      "time: 823 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
