final version of algorithm - stable, just kinda slow

--- a/src/network_final.ipynb
+++ b/src/network_final.ipynb
@@ -231,8 +231,7 @@
    "source": [
     "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
     "#this is the most labor-intensive part of the program, unsurprisingly - n=2 takes 2 minutes on my macbook pro\n",
-    "#n=3:\n",
-    "#n=4:\n",
+    "#n=3 and n=4 take about 30 minutes each.\n",
     "tier_depth = 4\n",
     "\n",
     "#successively add tiers of friendship to every user in user_master_list\n",
@@ -243,6 +242,20 @@
     "        user_info.friends[tier] = find_new_friends(user_master_list,user_info,tier)\n",
     "        \n",
     "print(\"Done. Connections of degree n accessible via User.friends[n]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## create forward lookup ##\n",
+    "## for each user, dictionary dos links a user id with the level of friendship\n",
+    "for user_id, user_data in user_master_list.items():\n",
+    "    user_data.build_dos()"
    ]
   }
  ],
