class corrupted somehow - fixing

--- a/src/network_final.ipynb
+++ b/src/network_final.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "## Paths to data files\n",
-    "input_dir = 'paymo_input/'\n",
+    "input_dir = '../paymo_input/'\n",
     "batch_file = 'batch_payment.csv'\n",
     "stream_file = 'stream_payment.csv'\n",
     "batch_path = input_dir + batch_file\n",
@@ -38,9 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -49,6 +49,8 @@
     "## best solution likely involves regular expressions, but not analyzing messages for the time being anyway\n",
     "\n",
     "#takes about 30 seconds to load the 3 million lines each of batch_payment and stream_payment on my macbook pro.\n",
+    "\n",
+    "print('Loading into Pandas...')\n",
     "\n",
     "batch_dict = {}\n",
     "batch_dict['time'] = {}\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -107,9 +109,9 @@
     "## find all transactions where user <user_id> was giver, then find list of partners in those transactions\n",
     "for user_id,transactions in givers:\n",
     "    \n",
-    "    #store list of all transaction partners as numpy array\n",
+    "    #store list of all transaction partners as list (easiest type to extend later)\n",
     "    try:\n",
-    "        partners_1[int(user_id)] = np.array(givers.get_group(user_id)['id2'].astype(int))\n",
+    "        partners_1[int(user_id)] = list(givers.get_group(user_id)['id2'].astype(int))\n",
     "   \n",
     "    #some lines of batch_payment.txt and stream_payment.txt are off - omit malformed entries\n",
     "    except (KeyError, ValueError) as BadLine:\n",
@@ -118,9 +120,9 @@
     "## same as before for all transactions where <user_id> was receiver\n",
     "for user_id,transactions in receivers:\n",
     "    \n",
-    "    #store list of all transaction partners as numpy array\n",
+    "    #store list of all transaction partners as list (easiest type to extend later)\n",
     "    try: \n",
-    "        partners_2[int(user_id)] = np.array(givers.get_group(user_id)['id1'].astype(int))\n",
+    "        partners_2[int(user_id)] = list(receivers.get_group(user_id)['id1'].astype(int))\n",
     "        \n",
     "    #some lines of batch_payment.txt and stream_payment.txt are off - omit malformed entries\n",
     "    except (KeyError, ValueError) as BadLine:\n",
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -144,11 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (0,) (242,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-87ac319b54c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0muser_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpartners_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mpp\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mpartners_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0muser_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpartners_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (242,) "
+     ]
+    }
+   ],
    "source": [
     "user_master_list = {}\n",
     "\n",
